# postcard-website

./: Cargo.toml  babel.config.js  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  refresh.sh  refresh_new.sh  shell.nix  tsconfig.json
backend/: Cargo.toml  index.js
backend/migrations/2020-10-08-050905_create_cards/: up.sql
backend/src/: lib.rs  main.rs  models.rs  schema.rs
dashboard/: Cargo.toml  dashboard-1.0.0.tgz  package.json
dashboard/frontend/: index.js  package.json
dashboard/src/: main.rs
dashboard/templates/: index.html
src/: lib.rs
