[package]
name = "backend"
version = "0.1.0"
authors = ["André Krüger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {git= "https://github.com/SergioBenitez/Rocket"}
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls","postgres" ] }