[package]
name = "backend"
version = "0.1.0"
authors = ["André Krüger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "*"
async-graphql-warp = "*"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
warp = "*"
serde_json = "*"
serde_derive = "*"
serde = "*"
futures = "*"
warp-sessions ="*"
async-redis-session ="*"
async-trait="*"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }